2000-12-10  Damon Chaplin  <damon@helixcode.com>

	* gtk-doc.spec.in: added spec.in file from John Gotts
	<jgotts@linuxsavvy.com>.

	* configure.in (AC_OUTPUT): added spec file.

	* Makefile.am: uncommented spec file stuff, now that we have one.

	* gtkdoc-scanobj.in (get_type_name): 
	* gtkdoc-scangobj.in (get_type_name): updated to use the type numbers
	rather than the type names, which were changed in GTK+ 1.2. This
	should fix a problem where GTK_TYPE_STRING arguments were output as
	'GtkString *arg' instead of 'gchar *arg'.

	I'm still not sure what to output for the structured types such as
	GTK_TYPE_SIGNAL/ARGS/FOREIGN/CALLBACK/C_CALLBACK. Should these be
	expanded to several arguments to the signal handler?

2000-11-25  Dan Mueth <d-mueth@uchicago.edu>

	* help/manual/C/: created this path
    * gtk-doc-manual.sgml: Put part of the outline into SGML.
      Chris plans to put rest of outline in here and start
      writing.
    * fdl-appendix.sgml: The FDL in SGML.  We will probably post
      these on the web as a single document (book) so we will
      need the FDL to be included as an appendix.

Fri Nov  3 07:21:34 2000  Tim Janik  <timj@gtk.org>

	* gtkdoc-mkdb.in:
	(ParseStructDeclaration):
	(OutputStruct):
	* gtkdoc-mktmpl.in:
	(ParseStructDeclaration):
	support /*<protected>*/ equivalently to /*<private>*/

Fri Nov  3 07:15:58 2000  Tim Janik  <timj@gtk.org>

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in:
	(ReadTemplateFile): only eat up the first space (if at all
	present) after "@param:" to preserve indentation for multiline
	parameter descriptions.

2000-10-30  Raja R Harinath  <harinath@cs.umn.edu>

	* gtkdoc-mkdb.in (ParseStructDeclaration):
	Stop scanning at '}' only when it starts a line.
	* gtkdoc-mktmpl.in (ParseStructDeclaration): Likewise.
	
Mon Oct 30 02:59:54 2000  Tim Janik  <timj@gtk.org>

	* gtkdoc-scangobj.in: use g_signal_list_ids().

Sun Oct 29 02:54:51 2000  Owen Taylor  <otaylor@redhat.com>
