@@ -1,3 +1,14 @@
+2000-12-19  Damon Chaplin  <damon@helixcode.com>
+
+	* gtkdoc-scanobj.in: 
+	* gtkdoc-scangobj.in: added default cases to get_type_name().
+
+2000-12-10  Arturo Tena  <arturo@directmail.org>
+
+	* gtkdoc-scanobj.in (get_type_name): 
+	* gtkdoc-scangobj.in (get_type_name): fixed syntax error: forgotten
+	to close a switch statement.
+
 2000-12-10  Damon Chaplin  <damon@helixcode.com>
 
 	* gtk-doc.spec.in: added spec.in file from John Gotts
